# agentic-contract-generator

./: .gitignore  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
cag/: schemas.py
cag/agents/: contract_capture.py  contract_generator.py  final_contract.py  format_validator.py  graph.py  human_in_the_loop.py  legal_validator.py  llm_validator.py  quality_evaluator.py  structure_validator.py
cag/contract_types/: contract_required_fields.json
cag/contract_types/contract_examples/: contrato_comision_mercantil.json  contrato_compraventa.json  contrato_confidencialidad_nda.json  contrato_laboral_tiempo_indeterminado.json
cag/contract_types/contract_input_examples/: contrato_arrendamiento.json  contrato_franquicia.json  contrato_prestacion_servicios.json
docs/contract_examples/Contrato_Comision_Mercantil/: Contrato_Comision_Mercantil_ejemplo_1.doc
docs/contract_examples/Contrato_Compraventa/: Contrato_Compraventa_ejemplo_2.doc
docs/contract_examples/Contrato_Laboral_Indefinido/: Contrato_Laboral_Indefinido_ejemplo_6.docx
docs/contract_examples/Contrato_Laboral_Temporal/: Contrato_Laboral_Temporal_ejemplo_2.docx
docs/contract_examples/Contrato_Prestacion_Servicios/: Contrato_Prestacion_Servicios_ejemplo_2.docx  Contrato_Prestacion_Servicios_ejemplo_3.docx
scripts/: export_to_vectorstore.py  run_contract_graph.py
